--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
         "angular-resource": "1.0.6",
         "angular-cookies": "1.0.6",
         "angular-bootstrap": "0.6.0",
-        "angular-ui-utils": "0.0.4"
+        "angular-ui-utils": "0.0.4",
+        "angular-socket-io": "0.2.0"
     }
 }
