--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
         "bower": "latest",
         "grunt": "latest",
         "grunt-cli": "latest",
-        "grunt-env": "latest"
+        "grunt-env": "latest",
+        "socket.io": "latest",
+        "cookie":"latest",
+        "connect":"latest"
     },
     "devDependencies": {
         "supertest": "latest",
