add async to queue data to client

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "grunt-env": "latest",
         "socket.io": "latest",
         "cookie":"latest",
-        "connect":"latest"
+        "connect":"latest",
+        "async": "latest"
     },
     "devDependencies": {
         "supertest": "latest",
